Fix cursor position after jump

--- a/css/style.less
+++ b/css/style.less
@@ -37,7 +37,7 @@
 @line-height: 25px;
 @font-size: 18px;
 
-@ruler: 100ch;
+@ruler: 90ch;
 
 html, body {
   margin: 0;
